# nrEngine

./: AUTHORS  Makefile  README  nrEngine.pc.in
Doc/: config.doxy  index.html
Doc/dias/: Makefile.am  Makefile.in  Resources.dia
Make/: Makedefs  Makerules
Plugins/: Makefile  README
Plugins/dynamicResources/: Makefile  Monitor.cpp  Monitor.h  Plugin.cpp  inotify-cxx.h
Plugins/luaScripting/: Makefile  Plugin.cpp  Script.cpp  Script.h  ScriptConnector.cpp  ScriptConnector.h  ScriptLoader.cpp  ScriptLoader.h
Plugins/rdtscTimeSource/: Cpu.cpp  Cpu.h  Makefile  Methods.h  Plugin.cpp  TimeSource.cpp  TimeSource.h
Templates/: cpp
Templates/plugin_template/: Makefile.am  Plugin.cpp
Test/: Makefile
Test/scriptingTest/: Makefile  main.cpp  test.nrscript
Test/threadTest/: Makefile  main.cpp
doc/: config.doxy
doc/dias/: Framework.dia
include/: Clock.h  Engine.h  EventActor.h  EventChannel.h  FileSystemManager.h  Makefile  Package.h  Platform.h  Plugin.h  ResourceLoader.h  ScriptEngine.h  Timer.h
include/nrEngine/: Binding.h  Clock.h  Engine.h  Event.h  FileStream.h  FileStreamLoader.h  Log.h  Makefile  Prerequisities.h  Property.h  PropertyManager.h  ResourceFactory.h  ResourceManager.h  Script.h  StdHelpers.h  TimeSource.h  (+3 more)
nrEngine/: Makefile  nrEngine.h
src/: Engine.cpp  EventActor.cpp  EventChannel.cpp  EventManager.cpp  FileStreamLoader.cpp  ITask.cpp  KernelEvent.cpp  Makefile  TimeSourceVirtual.cpp  Timer.cpp  VariadicArgument.cpp
win32-devcpp/: Makefile.win  nrEngine.dev  nrEngine_private.h  nrEngine_private.rc  nrEngine_private.res
(+102 files in other folders)
